--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4353,9 +4353,11 @@ input[type="button"].btn-block {
 	padding-top: 0.3125rem;
 	padding-bottom: 0.3125rem;
 	margin-right: 1rem;
-	font-size: 1.25rem;
+	font-size: 2.0rem;
 	line-height: inherit;
 	white-space: nowrap;
+	font-family: Poppins;
+	font-weight: bold;
 }
 
 .navbar-brand:hover, .navbar-brand:focus {
